--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
     "name": "hhh-host",
-    "version": "2.0.8",
+    "version": "3.0.0",
     "description": "",
     "main": "./src/index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "node ./test/index.js"
     },
     "author": "aazin",
     "license": "MIT",
